# canary-driver

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
CanaryMonitor/: CMakeLists.txt  CanaryMonitor.cpp  CanaryMonitor.rc.in
CanaryMonitor/Include/: Common.hpp  Resource.h
Common/: CMakeLists.txt  Constants.hpp  Log.cpp  Log.hpp  Utils.cpp  Utils.hpp
MiniFilter/: CMakeLists.txt  Device.cpp  MinifilterDriver.cpp  MinifilterDriver.hpp  MinifilterDriver.rc
ProcessDumper/: CMakeLists.txt  ProcessDumper.cpp  ProcessDumper.rc.in
ProcessDumper/Include/: Resource.h
ProcessDumper/Include/wil/: cppwinrt_authoring.h  filesystem.h  win32_helpers.h
cmake/: FindWdk.cmake
